Resolved routing issues, and fixed the overlap in the timesheet table index page

--- a/src/assets/css/timesheet.css
+++ b/src/assets/css/timesheet.css
@@ -6,6 +6,11 @@
     overflow: hidden;
 }
 
+.timesheet-container {
+    background-color: #fff;
+    border-radius: 3rem;
+}
+
 #timesheetCreateHeader {
     width: 100%;
     table-layout: fixed;
